Fix the overflow x

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4,6 +4,7 @@
 
 body,
 html {
+  overflow-x: hidden;
   margin: 0;
   padding: 0;
 }
